add distance function on vehicle-level